# serial-assistant

./: .gitignore  Cargo.toml  build.rs
config/: waveform.lua
src/: app.rs  frame_history.rs  lib.rs  main.rs  serial.rs  ui.rs  utils.rs
